<resources>
    <string name="app_name">GithubUser</string>
    <string name="fullname">Nama lengkap</string>
    <string name="username">username</string>
    <string name="repository">repository</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="mirza">Mirza Faturrachman</string>
    <string name="github_user">Github User</string>
</resources>
