<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg_detail"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        tools:src="@color/colorPrimaryDark"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#dedede"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/tv_detail_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/tv_detail_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:drawableLeft="@drawable/ic_home_black_24dp"
        android:drawablePadding="8dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_user_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:drawableStart="@drawable/ic_work_black_24dp"
        android:drawablePadding="8dp"/>

</LinearLayout>