<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="16dp"
            tools:src="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@+id/img_photo"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="14sp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_below="@id/tv_fullName"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/img_photo"
            android:layout_below="@id/tv_username">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/detail_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/detail_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#DEDEDE"
        android:layout_marginBottom="8dp"/>

</LinearLayout>